[package]
name = "malloc_hook"
version = "0.1.0"
edition = "2021"

[lib]


[dependencies]
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
jemallocator = { package = "tikv-jemallocator", version = "0.6.0", features = [
    "unprefixed_malloc_on_supported_platforms",
] }
tikv-jemalloc-sys = { version = "*", features = ["stats"] }
